# exam_cuit

./: .gitignore  CMakeLists.txt
src/: abutton.h  main.cpp  mainWindow.cpp  mainWindow.h
